--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -1,3 +1,24 @@
 .hidden{
     display: none;
 }
+
+html, body, #app{
+    width: 100%;
+    height: 100%;
+}
+
+#main{
+    display: flex;
+}
+
+.sidebar{
+    width: 15%;
+}
+.main-content{
+    width: 85%;
+}
+.container, .row, .col{
+    max-width: none;
+    margin: 0;
+    padding: 0;
+}
