--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -11,6 +11,11 @@ html, body, #app{
     display: flex;
 }
 
+#app{
+    background-image: url("/images/background.avif");
+    background-size: cover;
+}
+
 .sidebar{
     width: 15%;
 }
@@ -26,4 +31,18 @@ html, body, #app{
 .row-flex, .col-flex{
     display: flex;
     width: 100%;
+}
+
+.card-button{
+    margin-left: 15px;
+}
+
+.card{
+    background: rgba(255,255,255, 0.9);
+}
+.accordion-item{
+    background: rgba(255,255,255, 0.9);
+}
+.accordion-button{
+    background: rgba(255,255,255, 0.0);
 }
