--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -14,10 +14,17 @@ html, body, #app{
 #app{
     background-image: url("/images/background.avif");
     background-size: cover;
+	overflow: auto;
 }
 
-.sidebar{
+#content{
+	width: 100%;
+	height: 100%;
+}
+
+#sidebar{
     width: 15%;
+	height: 100%;
 }
 .main-content{
     width: 85%;
@@ -50,13 +57,15 @@ html, body, #app{
     background: rgba(255,255,255, 95%);
 }
 
+/* Changes */
 a {
     color: #6592db;
 }
 
-.text-body{
-	margin-right: 0.5em;
-	margin-bottom: 0.5em;
+.card-header{
+	font-size: 20px;
+	font-weight: medium;
+	font-family: Verdana, sans-serif
 }
 #panelsStayOpen-timetables a:link{
 	 display:block;
@@ -76,9 +85,6 @@ a {
 	 font-weight: medium;
 	 padding: 10px 18px;
 }
-.col-md-6{
-	 margin-bottom: 1em;
-}
 #all_timetables{
   padding: 10px 20px;
   text-align: left;
@@ -90,56 +96,10 @@ a {
 	background-color: #a6c8ff;
 	font-weight: medium;
 }
-.card-header{
-	font-size: 20px;
-	font-weight: medium;
-	font-family: Verdana, sans-serif
-}
-#all_teams{
-	font-size: 17px;
+
+.all_teams{
 	background-color: #a6c8ff;
 	font-weight: medium;
-	font-family: Verdana, sans-serif
-	
-}
-#all_teams_names{
-	padding: 10px 15px;
-	font-size: 15px;
-	background-color: #d6e6ff;
-	font-weight: medium;
-	margin-top: 2px;
-	text-indent:10px;
-	font-family: Verdana, sans-serif
-}
-#all_teams_button{
-	padding: 3px 20px;
-    text-align: left;
-    font-size: 15px;
-}
-#all_teams_button2{
-	padding: 3px 20px;
-    text-align: left;
-    font-size: 15px;
-	margin-bottom:15px;
-}
-#show_players_button{
-	margin-top:10px;
-	padding: 3px 10px;
-    text-align: left;
-    font-size: 15px;
-}
-#view_player_button{
-	padding: 3px 10px;
-    text-align: left;
-    font-size: 15px;
-	margin-bottom:15px;
-}
-#surname.form-control-plaintext{
-	margin-left: 0.5em;
-}
-#name.form-control-plaintext{
-	margin-left: 0.5em;
-}
-.col-form-label{
-	 font-weight: medium;
+	font-family: Verdana, sans-serif;
+	margin-bottom: 1%
 }
