--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -39,11 +39,6 @@ html, body, #app{
     display: flex;
     width: 100%;
 }
-
-.card-button{
-    margin-left: 15px;
-}
-
 .card{
     background: rgba(255,255,255, 95%);
 }
@@ -56,7 +51,9 @@ html, body, #app{
 .dropdown-menu.show{
     background: rgba(255,255,255, 95%);
 }
-
+.flex-display{
+    display: flex;
+}
 /* Changes */
 
 .card-header{
