--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -40,7 +40,7 @@ html, body, #app{
     width: 100%;
 }
 .card{
-    background: rgba(255,255,255, 95%);
+    background: rgba(255,255,255, 0.95);
 }
 .accordion-item{
     background: rgba(255,255,255, 0.0);
@@ -49,7 +49,7 @@ html, body, #app{
     background: rgba(255,255,255, 0.0);
 }
 .dropdown-menu.show{
-    background: rgba(255,255,255, 95%);
+    background: rgba(255,255,255, 0.95);
 }
 .flex-display{
     display: flex;
